@@ -25,13 +25,13 @@
 
 package org.openjdk.bench.java.lang.foreign;
 
-import java.lang.foreign.Addressable;
+import java.lang.foreign.Arena;
 import java.lang.foreign.Linker;
 import java.lang.foreign.FunctionDescriptor;
-import java.lang.foreign.MemoryAddress;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.SegmentScope;
 import java.lang.foreign.SegmentAllocator;
+
 import org.openjdk.jmh.annotations.Benchmark;
 import org.openjdk.jmh.annotations.BenchmarkMode;
 import org.openjdk.jmh.annotations.Fork;
@@ -57,10 +57,10 @@ import static java.lang.foreign.ValueLayout.JAVA_BYTE;
 @Fork(value = 3, jvmArgsAppend = { "--enable-native-access=ALL-UNNAMED", "--enable-preview" })
 public class StrLenTest extends CLayouts {
 
-    MemorySession session = MemorySession.openConfined();
+    Arena arena = Arena.openConfined();
 
     SegmentAllocator segmentAllocator;
-    SegmentAllocator arenaAllocator = SegmentAllocator.newNativeArena(session);
+    SegmentAllocator arenaAllocator = new RingAllocator(arena.scope());
 
     @Param({"5", "20", "100"})
     public int size;
@@ -74,19 +74,19 @@ public class StrLenTest extends CLayouts {
 
     static {
         Linker abi = Linker.nativeLinker();
-        STRLEN = abi.downcallHandle(abi.defaultLookup().lookup("strlen").get(),
+        STRLEN = abi.downcallHandle(abi.defaultLookup().find("strlen").get(),
                 FunctionDescriptor.of(C_INT, C_POINTER));
     }
 
     @Setup
     public void setup() {
         str = makeString(size);
-        segmentAllocator = SegmentAllocator.prefixAllocator(MemorySegment.allocateNative(size + 1, MemorySession.openConfined()));
+        segmentAllocator = SegmentAllocator.prefixAllocator(MemorySegment.allocateNative(size + 1, arena.scope()));
     }
 
     @TearDown
     public void tearDown() {
-        session.close();
+        arena.close();
     }
 
     @Benchmark
@@ -96,36 +96,35 @@ public class StrLenTest extends CLayouts {
 
     @Benchmark
     public int panama_strlen() throws Throwable {
-        try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment segment = MemorySegment.allocateNative(str.length() + 1, session);
-            segment.setUtf8String(0, str);
-            return (int)STRLEN.invokeExact((Addressable)segment);
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment segment = arena.allocateUtf8String(str);
+            return (int)STRLEN.invokeExact(segment);
         }
     }
 
     @Benchmark
-    public int panama_strlen_arena() throws Throwable {
-        return (int)STRLEN.invokeExact((Addressable)arenaAllocator.allocateUtf8String(str));
+    public int panama_strlen_ring() throws Throwable {
+        return (int)STRLEN.invokeExact(arenaAllocator.allocateUtf8String(str));
     }
 
     @Benchmark
     public int panama_strlen_prefix() throws Throwable {
-        return (int)STRLEN.invokeExact((Addressable)segmentAllocator.allocateUtf8String(str));
+        return (int)STRLEN.invokeExact(segmentAllocator.allocateUtf8String(str));
     }
 
     @Benchmark
     public int panama_strlen_unsafe() throws Throwable {
-        MemoryAddress address = makeStringUnsafe(str);
-        int res = (int) STRLEN.invokeExact((Addressable)address);
+        MemorySegment address = makeStringUnsafe(str);
+        int res = (int) STRLEN.invokeExact(address);
         freeMemory(address);
         return res;
     }
 
-    static MemoryAddress makeStringUnsafe(String s) {
+    static MemorySegment makeStringUnsafe(String s) {
         byte[] bytes = s.getBytes();
         int len = bytes.length;
-        MemoryAddress address = allocateMemory(len + 1);
-        MemorySegment str = MemorySegment.ofAddress(address, len + 1, MemorySession.global());
+        MemorySegment address = allocateMemory(len + 1);
+        MemorySegment str = address.asSlice(0, len + 1);
         str.copyFrom(MemorySegment.ofArray(bytes));
         str.set(JAVA_BYTE, len, (byte)0);
         return address;
@@ -142,5 +141,32 @@ public class StrLenTest extends CLayouts {
                  mollit anim id est laborum.
                 """;
         return lorem.substring(0, size);
+    }
+
+    static class RingAllocator implements SegmentAllocator {
+        final MemorySegment segment;
+        SegmentAllocator current;
+        long rem;
+
+        public RingAllocator(SegmentScope session) {
+            this.segment = MemorySegment.allocateNative(1024, session);
+            reset();
+        }
+
+        @Override
+        public MemorySegment allocate(long byteSize, long byteAlignment) {
+            if (rem < byteSize) {
+                reset();
+            }
+            MemorySegment res = current.allocate(byteSize, byteAlignment);
+            long lastOffset = segment.segmentOffset(res) + res.byteSize();
+            rem = segment.byteSize() - lastOffset;
+            return res;
+        }
+
+        void reset() {
+            current = SegmentAllocator.slicingAllocator(segment);
+            rem = segment.byteSize();
+        }
     }
 }
